[package]
name = "whois-rs"
version = "1.6.1"
authors = ["Magic Len <len@magiclen.org>", "Cycle Five <cycle.five@proton.me>"]
edition = "2021"
rust-version = "1.71"
repository = "https://github.com/cycle-five/whois-rust"
keywords = ["whois"]
categories = ["web-programming::websocket"]
description = "This is a WHOIS client library for Rust, inspired by https://github.com/hjr265/node-whois, forked from https://github.com/magiclen/whois-rust."
license = "MIT"
include = ["src/**/*", "tests/*", "data/*", "Cargo.toml", "README.md", "LICENSE"]

[dependencies]
serde_json = "1"
once_cell = "1"
regex = "1"
hickory-client = "0.24"

tokio = { version = "1", features = ["fs", "net", "time", "io-util"], optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt"] }

# This is a fork of the validators crate
[dependencies.validators]
version = "0.25.3"
default-features = false
features = ["derive", "host"]

[package.metadata.docs.rs]
all-features = true

# patch for validators to use the forked validators crate
[patch.crates-io]
validators = {git = "https://github.com/cycle-five/validators-rs", branch = "master", version = "0.25.3"}
